[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git_import"
description = "Import python source from a git repository into your project"
authors = [{ name="Mohammad Zain Abbas", email="mohammadzainabbas@gmail.com" }]
readme = "README.md"
license = {file = 'LICENSE'}
dynamic = ["version"]
keywords = ["git", "import", "source", "repository"]
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mohammadzainabbas/git-import"
Issues = "https://github.com/mohammadzainabbas/git-import/issues"
Repository = "https://github.com/mohammadzainabbas/git-import"

[tool.hatch.version]
path = "git_import/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["git_import"]

[tool.hatch.publish.index]
disable = true

[terminal.styles]
spinner = "..."