[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-import"
dynamic = ["version"]
description = 'Import python source from a git repository into your project.'
readme = "README.md"
requires-python = ">=3.8"
license = {file = 'LICENSE'}
keywords = ["git-import", "git-importer", "source", "github"]
authors = [
  { name = "Mohammad Zain Abbas", email = "mohammadzainabbas@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/git-import#readme"
Issues = "https://github.com/unknown/git-import/issues"
Source = "https://github.com/unknown/git-import"

[tool.hatch.version]
path = "src/git_import/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/git_import tests}"

[tool.coverage.run]
source_pkgs = ["git_import", "tests"]
branch = true
parallel = true
omit = [
  "src/git_import/__about__.py",
]

[tool.coverage.paths]
git_import = ["src/git_import", "*/git-import/src/git_import"]
tests = ["tests", "*/git-import/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
